[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/CommentGraphNode.gd" type="Script" id=1]
[ext_resource path="res://Assets/Icons/Remove.svg" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/Add.svg" type="Texture" id=3]
[ext_resource path="res://Assets/UserIcons/Up_right.svg" type="Texture" id=4]
[ext_resource path="res://Assets/UserIcons/Down_right.svg" type="Texture" id=5]
[ext_resource path="res://Assets/UserIcons/Right.svg" type="Texture" id=6]
[ext_resource path="res://Assets/UserIcons/Simple-up.svg" type="Texture" id=7]
[ext_resource path="res://Assets/UserIcons/Simple-down.svg" type="Texture" id=8]
[ext_resource path="res://Assets/UserIcons/Double-up.svg" type="Texture" id=9]
[ext_resource path="res://Assets/UserIcons/Double-right.svg" type="Texture" id=10]
[ext_resource path="res://Assets/UserIcons/Double-down.svg" type="Texture" id=11]
[ext_resource path="res://Assets/UserIcons/Disc.svg" type="Texture" id=12]
[ext_resource path="res://Assets/UserIcons/Check.svg" type="Texture" id=13]
[ext_resource path="res://Assets/UserIcons/Cross.svg" type="Texture" id=14]
[ext_resource path="res://Assets/UserIcons/Question.svg" type="Texture" id=15]
[ext_resource path="res://Assets/UserIcons/Exclamation.svg" type="Texture" id=16]

[node name="CommentNode" type="GraphNode"]
margin_right = 231.0
margin_bottom = 81.0
mouse_filter = 2
title = "Title"
show_close = true
comment = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 215.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 199.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 135.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="IconButton1" type="OptionButton" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 29.0
margin_bottom = 22.0
icon = ExtResource( 4 )
flat = true
expand_icon = true
items = [ "", ExtResource( 4 ), false, 0, null, "", ExtResource( 6 ), false, 1, null, "", ExtResource( 5 ), false, 2, null, "", ExtResource( 9 ), false, 3, null, "", ExtResource( 10 ), false, 4, null, "", ExtResource( 11 ), false, 5, null, "", ExtResource( 13 ), false, 6, null, "", ExtResource( 15 ), false, 7, null, "", ExtResource( 16 ), false, 8, null, "", ExtResource( 14 ), false, 9, null, "", ExtResource( 12 ), false, 10, null, "", ExtResource( 7 ), false, 11, null, "", ExtResource( 8 ), false, 12, null ]
selected = 0

[node name="IconButton2" type="OptionButton" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 33.0
margin_right = 62.0
margin_bottom = 22.0
icon = ExtResource( 4 )
flat = true
expand_icon = true
items = [ "", ExtResource( 4 ), false, 0, null, "", ExtResource( 6 ), false, 1, null, "", ExtResource( 5 ), false, 2, null, "", ExtResource( 9 ), false, 3, null, "", ExtResource( 10 ), false, 4, null, "", ExtResource( 11 ), false, 5, null, "", ExtResource( 13 ), false, 6, null, "", ExtResource( 15 ), false, 7, null, "", ExtResource( 16 ), false, 8, null, "", ExtResource( 14 ), false, 9, null, "", ExtResource( 12 ), false, 10, null, "", ExtResource( 7 ), false, 11, null, "", ExtResource( 8 ), false, 12, null ]
selected = 0

[node name="IconButton3" type="OptionButton" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_right = 95.0
margin_bottom = 22.0
icon = ExtResource( 4 )
flat = true
expand_icon = true
items = [ "", ExtResource( 4 ), false, 0, null, "", ExtResource( 6 ), false, 1, null, "", ExtResource( 5 ), false, 2, null, "", ExtResource( 9 ), false, 3, null, "", ExtResource( 10 ), false, 4, null, "", ExtResource( 11 ), false, 5, null, "", ExtResource( 13 ), false, 6, null, "", ExtResource( 15 ), false, 7, null, "", ExtResource( 16 ), false, 8, null, "", ExtResource( 14 ), false, 9, null, "", ExtResource( 12 ), false, 10, null, "", ExtResource( 7 ), false, 11, null, "", ExtResource( 8 ), false, 12, null ]
selected = 0

[node name="IconButton4" type="OptionButton" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 99.0
margin_right = 128.0
margin_bottom = 22.0
icon = ExtResource( 4 )
flat = true
expand_icon = true
items = [ "", ExtResource( 4 ), false, 0, null, "", ExtResource( 6 ), false, 1, null, "", ExtResource( 5 ), false, 2, null, "", ExtResource( 9 ), false, 3, null, "", ExtResource( 10 ), false, 4, null, "", ExtResource( 11 ), false, 5, null, "", ExtResource( 13 ), false, 6, null, "", ExtResource( 15 ), false, 7, null, "", ExtResource( 16 ), false, 8, null, "", ExtResource( 14 ), false, 9, null, "", ExtResource( 12 ), false, 10, null, "", ExtResource( 7 ), false, 11, null, "", ExtResource( 8 ), false, 12, null ]
selected = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 139.0
margin_right = 199.0
margin_bottom = 22.0

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 3 )
flat = true

[node name="SubButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[connection signal="close_request" from="." to="." method="_on_CommentNode_close_request"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer2/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer2/SubButton" to="." method="_on_SubButton_pressed"]
